--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@tailwindcss/ui": "^0.5.0",
-        "axios": "^0.19",
-        "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "@tailwindcss/ui": "^0.7.2",
+        "axios": "^0.25.0",
+        "cross-env": "^7.0.3",
+        "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
-        "postcss-import": "^12.0.1",
-        "resolve-url-loader": "^3.1.0",
-        "tailwindcss": "^1.3.0",
-        "tailwindcss-multi-theme": "1.0.3",
-        "vue-template-compiler": "^2.6.12"
+        "postcss-import": "^14.0.2",
+        "resolve-url-loader": "^5.0.0",
+        "tailwindcss": "^3.0.16",
+        "tailwindcss-multi-theme": "1.0.4",
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "alpinejs": "^2.8.1",
+        "@types/color": "^3.0.2",
+        "alpinejs": "^3.8.1",
         "turbolinks": "^5.2.0"
     }
 }
